--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-feather": "1.1.4",
-    "react-scripts": "4.0.3",
     "styled-components": "5.3.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "react-scripts": "4.0.3"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
