--- a/package.json
+++ b/package.json
@@ -1,30 +1,22 @@
 {
-  "name": "react-lazy-demo",
+  "name": "react-portlet",
   "version": "1.0.0",
-  "description": "",
-  "keywords": [],
-  "main": "src/index.js",
+  "description": "React Portlet",
+  "license": "UNLICENSED",
   "dependencies": {
-    "classnames": "2.3.1",
-    "prop-types": "15.8.1",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "react-feather": "1.1.4",
-    "styled-components": "5.3.5"
+    "@liferay/portal-7.4": "*"
   },
-  "devDependencies": {
-    "react-scripts": "4.0.3"
+  "portlet": {
+    "com.liferay.portlet.display-category": "category.sample",
+    "com.liferay.portlet.header-portlet-css": "/css/styles.css",
+    "com.liferay.portlet.instanceable": true,
+    "javax.portlet.name": "react_portlet",
+    "javax.portlet.security-role-ref": "power-user,user",
+    "javax.portlet.resource-bundle": "content.Language"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "build": "liferay build",
+    "clean": "liferay clean",
+    "deploy": "liferay deploy"
+  }
 }
