--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "dependencies": {
     "@liferay/portal-7.4": "*"
   },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "react-scripts": "^5.0.1"
+  },
   "portlet": {
     "com.liferay.portlet.display-category": "category.sample",
     "com.liferay.portlet.header-portlet-css": "/css/styles.css",
@@ -15,8 +19,21 @@
     "javax.portlet.resource-bundle": "content.Language"
   },
   "scripts": {
-    "build": "liferay build",
+    "build": "cross-env NODE_ENV=production liferay build",
     "clean": "liferay clean",
-    "deploy": "liferay deploy"
+    "deploy": "cross-env NODE_ENV=production liferay deploy",
+    "start": "react-scripts start"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
