Upgrade to Liferay 7.4.3.49

--- a/.npmbundlerrc
+++ b/.npmbundlerrc
@@ -1,10 +1,28 @@
 {
   "config": {
     "imports": {
+      "@liferay/address-web": {
+        "/": "*"
+      },
+      "@liferay/content-dashboard-web": {
+        "/": "*"
+      },
       "@liferay/document-library-preview-css": {
         "/": "*"
       },
+      "@liferay/document-library-web": {
+        "/": "*"
+      },
+      "@liferay/flags-taglib": {
+        "/": "*"
+      },
       "@liferay/fragment-renderer-collection-filter-impl": {
+        "/": "*"
+      },
+      "@liferay/frontend-data-set-web": {
+        "/": "*"
+      },
+      "@liferay/frontend-icons-web": {
         "/": "*"
       },
       "@liferay/frontend-js-a11y-web": {
@@ -23,7 +41,13 @@
       "@liferay/frontend-js-state-web": {
         "/": "*"
       },
+      "@liferay/frontend-js-walkthrough-web": {
+        "/": "*"
+      },
       "@liferay/frontend-taglib": {
+        "/": "*"
+      },
+      "@liferay/layout-content-page-editor-web": {
         "/": "*"
       },
       "@liferay/map-common": {
@@ -33,6 +57,9 @@
         "/": "*"
       },
       "@liferay/map-openstreetmap": {
+        "/": "*"
+      },
+      "@liferay/object-js-components-web": {
         "/": "*"
       },
       "asset-taglib": {
@@ -51,8 +78,7 @@
         "/": "*"
       },
       "dynamic-data-mapping-form-field-type": {
-        "/": "*",
-        "axios": "*"
+        "/": "*"
       },
       "dynamic-data-mapping-form-renderer": {
         "/": "*"
@@ -108,20 +134,15 @@
       "frontend-js-node-shims": {
         "assert": "*",
         "buffer": "*",
-        "console": "*",
         "domain": "*",
         "events": "*",
         "os": "*",
         "path": "*",
         "process": "*",
-        "punycode": "*",
-        "setimmediate": "*",
         "string_decoder": "*",
         "timers": "*",
-        "tty": "*",
         "url": "*",
-        "util": "*",
-        "vm": "*"
+        "util": "*"
       },
       "frontend-js-recharts": {
         "recharts": "*"
@@ -178,6 +199,7 @@
         "@clayui/card": "*",
         "@clayui/charts": "*",
         "@clayui/color-picker": "*",
+        "@clayui/core": "*",
         "@clayui/css": "*",
         "@clayui/data-provider": "*",
         "@clayui/date-picker": "*",
@@ -190,6 +212,7 @@
         "@clayui/link": "*",
         "@clayui/list": "*",
         "@clayui/loading-indicator": "*",
+        "@clayui/localized-input": "*",
         "@clayui/management-toolbar": "*",
         "@clayui/modal": "*",
         "@clayui/multi-select": "*",
@@ -201,12 +224,14 @@
         "@clayui/panel": "*",
         "@clayui/popover": "*",
         "@clayui/progress-bar": "*",
+        "@clayui/provider": "*",
         "@clayui/shared": "*",
         "@clayui/slider": "*",
         "@clayui/sticker": "*",
         "@clayui/table": "*",
         "@clayui/tabs": "*",
         "@clayui/time-picker": "*",
+        "@clayui/toolbar": "*",
         "@clayui/tooltip": "*",
         "@clayui/upper-toolbar": "*",
         "clay": "*",
@@ -219,6 +244,7 @@
         "clay-checkbox": "*",
         "clay-collapse": "*",
         "clay-component": "*",
+        "clay-css": "*",
         "clay-data-provider": "*",
         "clay-dataset-display": "*",
         "clay-dropdown": "*",
@@ -239,18 +265,19 @@
         "clay-select": "*",
         "clay-sticker": "*",
         "clay-table": "*",
-        "clay-tooltip": "*",
-        "date-fns": "*",
-        "fuzzy": "*",
-        "react-transition-group": "*"
+        "clay-tooltip": "*"
       },
       "item-selector-taglib": {
+        "/": "*"
+      },
+      "social-bookmarks-taglib": {
         "/": "*"
       },
       "react-shared": {
         "/": "*"
       }
-    }
+    },
+    "strictGlobalDependencies": true
   },
   "exclude": {
     "*": ["**/tests/**/*", "**/test/**/*", "**/__tests__/**/*"],
@@ -342,5 +369,7 @@
       "configuration": "features/configuration.json"
     }
   },
-  "dump-report": false
+  "dump-report": true,
+  "max-parallel-files": 128,
+  "verbose": true
 }
