--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "React Portlet",
   "license": "UNLICENSED",
+  "main": "index.js",
   "dependencies": {
     "@liferay/portal-7.4": "*"
   },
