--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "javax.portlet.resource-bundle": "content.Language"
   },
   "scripts": {
-    "build": "liferay build",
+    "build": "yarn run sass && liferay build",
     "build:prod": "cross-env NODE_ENV=production liferay build",
     "clean": "liferay clean",
     "deploy": "liferay deploy",
     "deploy:prod": "cross-env NODE_ENV=production liferay deploy",
+    "sass": "sass assets/css/styles.scss assets/css/styles.css --source-map",
     "start": "react-scripts start"
   },
   "browserslist": {
