--- a/.npmbundlerrc
+++ b/.npmbundlerrc
@@ -1,6 +1,9 @@
 {
   "config": {
   },
+  "exclude": {
+    "*": ["**/__mocks__/**/*", "**/__tests__/**/*"]
+  },
   "rules": [
     {
       "test": "\\.json$",
